Add ability for the game to be disabled on the DOM side and for the player to reset the game

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <div class="square"></div>
         </div>
     </div>
+    <button type="button" id="reset-button">Reset</button>
     <footer>
         Made with ❤️ by <a href="https://github.com/04ramalmeida">João Almeida</a>
     </footer>
