--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="square"></div>
         </div>
     </div>
-
+    <p id="status"></p>
     <button type="button" id="reset-button">Reset</button>
     <footer>
         Made with ❤️ by <a href="https://github.com/04ramalmeida">João Almeida</a>
